koneksi/environment/staging/s3-gateway/patches/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: base-deploy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: s3-gateway
  template:
    metadata:
      labels:
        app: s3-gateway
    spec:
      imagePullSecrets:
        - name: ncr-regcred
      containers:
        - name: base-deploy
          image: base-image
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 3090
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: "1"
              memory: 1Gi
