koneksi/environment/staging/s3-gateway/patches/service.yml
apiVersion: v1
kind: Service
metadata:
  name: base-svc
spec:
  type: LoadBalancer
  selector:
    app: s3-gateway
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
